--- a/index.html
+++ b/index.html
@@ -11,37 +11,32 @@
     <header class="titulo">
         <h1>Blackjack</h1>
     </header>
-
     <div class="row mt-2">
         <div id="divBotones" class="col text-center">
             <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
             <button id="btnPedir" class="btn btn-primary">Pedir Carta</button>
             <button id="btnDetener" class="btn btn-primary">Detener</button>
-
         </div>
-
     </div>
-
     <div class="row container">
         <div class="col">
             <h1>Jugador 1 - <small>0</small></h1>
-            <div id="jugador-cartas">
-                 <!-- <img src="assets/cartas/10C.png" alt="" class="carta"> -->
+            <div id="jugador-cartas" class="divCartas">
             </div>
         </div>
     </div>
-
-
-    
     <div class="row container">
         <div class="col">
             <h1>Computadora - <small>0</small></h1>
-            <div id="computadora-cartas">
-                <!-- <img src="assets/cartas/3C.png" alt="" class="carta"> -->
+            <div id="computadora-cartas" class="divCartas">
             </div>
         </div>
     </div>
     <script src="assets/js/underscore-min.js"></script>
-    <script src="assets/js/juego.js"></script>
+    <script src="assets/js/juego-min.js"></script>
+    <script>
+        console.log( miModulo);
+        miModulo.nuevoJuego();
+    </script>
 </body>
 </html>
